--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
             </main>
         </div>
     </div>
+    <script id="template-author" type="text/x-handlebars-template">
+        <li><a href="#{{ id }}-{{title}}">{{ title }}</a></li>
+      </script>
+    <script id="template-tag" type="text/x-handlebars-template">
+        <li><a href="#{{ id }}">{{ title }}</a></li>
+      </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+    <script id="template-article-link" type="text/x-handlebars-template">
+        <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+      </script>
     <script src="js/script.js"></script>
 </body>
 
